--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600);
 
-* {
+/** {
 	margin:0;
 	padding:0;
 	box-sizing:border-box;
@@ -11,22 +11,21 @@
 	-o-font-smoothing:antialiased;
 	font-smoothing:antialiased;
 	text-rendering:optimizeLegibility;
-}
+}*/
 
 body {
 	font-family:"Open Sans", Helvetica, Arial, sans-serif;
+	margin: 0;
 	font-weight:300;
 	font-size: 12px;
 	line-height:30px;
 	color:#777;
-	background:##A3E4D7;
 }
 
 .container {
 	max-width:400px;
 	width:100%;
 	margin:0 auto;
-	position:relative;
 }
 
 #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
