--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -1,4 +1,5 @@
 body{
+	font-family: "Open Sans", Helvetica, Arial, sans-serif;
 	background-image: url(../fpbg.jpg);
 	background-size: cover;
 	font-family: arial;
@@ -80,14 +81,3 @@ nav ul li a{
 	top: 0;
 	width: 100%;
 }
-/**{
-	margin:0;
-	padding:0;
-	font-family: verdana;
-}
-.clearfix{
-	overflow: auto;
-}
-.logo{
-	margin:0;
-}*/
