--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,14 @@
-*{
-	margin: 0;
-	padding: 0;
-	font-family: Century Gothic;
-}
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600);
 
+
+body{
+	font-family:"Open Sans", Helvetica, Arial, sans-serif;
+	margin: 0;
+	font-weight:300;
+	line-height:30px;
+	color:#777;
+	
+}
 
 .mainheader{
 	height: 150px;
@@ -28,15 +33,6 @@
 	left: 100px;	
 }
 
-/*.win{
-	width: 100%;
-	position: relative;
-	align-self: center;
-	right: 180px;
-
-
-	
-}*/
 ul{
 	float: right;
 	list-style-type: none;
@@ -56,10 +52,7 @@ ul li a:hover {
 	background-color: #fff;
 	color: #000;
 }
-/*ul li.active a{
-	background-color: #fff;
-	color: #000;
-}*/
+
 .logo1 img{
 	position: absolute;
 	top: 50%;
@@ -82,17 +75,16 @@ ul li a:hover {
 	height: 170px;
 }
 .title{
+	color: #FA8072;
 	position: absolute;
 	top: 50%;
 	left: 27%;
 	transform: translate(-50%,-50%);
 }
 .title h1{
-	color: #fff;
 	font-size: 50px;	
 }
 .title h2{
-	color: #fff;
 	font-size: 35px;	
 }
 .button{
@@ -101,22 +93,14 @@ ul li a:hover {
 	left: 15%;
 	height: 100px;
 	font-size: 80px; 
-	/*transform: translate(-50%,-50%);*/
 }
 .btn{
 	border: 1px solid #fff;
 	padding: 10px 30px;
 	color: #fff;
-	/*text-decoration: none;*/
-	/*transition: 0.4s ease;*/
 	background-color: #fff;
 }
 
 .abt{
 	margin-top: 9%;
 }
-
-/*.btn:hover {
-	background-color: #fff;
-	color: #000;
-}*/
