--- a/login.css
+++ b/login.css
@@ -1,6 +1,6 @@
 
 body{
-	background-image: url(images/adminbg1.jpg);
+	background-image: url(images/fpbg.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 }
