--- a/css/styles.css
+++ b/css/styles.css
@@ -7,17 +7,6 @@ body{
 	font-weight:300;
 	line-height:30px;
 	color:#777;
-	
-}
-
-.mainheader{
-	height: 150px;
-	width: 100%;
-	position: fixed;
-	top: 0;
-	background-image: linear-gradient(rgba(0,0,0,1),rgba(0,0,0,1)), url(../fpbg.jpg);
-	background-size: cover;
-	background-position: center;
 }
 
 .index{
@@ -53,14 +42,14 @@ ul li a:hover {
 	color: #000;
 }
 
-.logo1 img{
+/* .logo img{
 	position: absolute;
 	top: 50%;
 	left: 8%;
 	transform: translate(-50%,-50%);
 	width: 300px;
 
-}
+} */
 
 .menu {
 	float: right;
@@ -103,4 +92,28 @@ ul li a:hover {
 
 .abt{
 	margin-top: 9%;
+}
+
+/* logo */
+
+
+.my-logo{
+	width: 100px;
+}
+
+.my-card-image{
+	margin: 0 auto;
+	width: 200px;
+	height: 200px;
+}
+
+.my-card{
+	width: 300px; 
+	height: 300px; 
+	margin: 10px;
+
+}
+
+.total{
+	margin-left: 10px;
 }
