--- a/indexs.css
+++ b/indexs.css
@@ -77,7 +77,7 @@ ul.topnav li a {
 nav ul.topnav li a:hover {
   border-bottom: 2px solid #ffffff;
   text-decoration: none;
-  color: #fff;
+  /* color: #fff; */
 }
 
 
@@ -87,11 +87,32 @@ ul.topnav li.dropdownIcon {
 }
 
 
-/*body{
-  background-image: url(images/fpbg.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  line-height: 1;
-    margin: 0;
+.login{
+         
+  margin: 0% 0% 3% 50%;
+  display: inline-block;
+  padding: 10px 14px;
+  color: #FFF;
+  border: 1px solid #FFF;
+  text-decoration: none;
+  font-size: 24px;
+  line-height: 120%;
+  background-color: rgba(255,255,255, 0);
+  border-radius: 4px;
+  transition: background-color 300ms ease;
+  cursor: pointer;
+  text-align: center;
+  position: fixed;
 }
-*/
+     
+.login:hover{
+   /*box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);*/
+   background-color: rgba(255,255,255, 0.3);
+  color: #FFF;
+}     
+
+img.my-index-logo{
+	width: 200px;
+  margin-left: 180px;
+  margin-top: 100px;
+}
